<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TabHost
        android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:paddingBottom="65dp" >

                <LinearLayout
                    android:id="@+id/tab1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/todayExp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/todayExpenses"
                        android:textAppearance="?android:attr/textAppearanceLarge" />
                    <TextView
                        android:id="@+id/sum"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hello"
                        android:gravity="center_horizontal|center"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="64sp" />

                    <Button
                        android:id="@+id/button1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Button1" />"

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Button2" />

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Button3" />

                    <Button
                        android:id="@+id/button4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Undo"
                        android:layout_gravity="right" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <ListView
                        android:id="@+id/listView1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >
                    </ListView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <GridView
                        android:id="@+id/gridView1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:numColumns="2" >
                    </GridView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" 
                    android:orientation="vertical" >
                    <LinearLayout
                    android:id="@+id/LL5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" 
                    android:orientation="horizontal">
	                    <Button
	                        android:id="@+id/thisMonthButton"
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        android:text="@string/thisMonth" />
	                    
	                    <Button
	                        android:id="@+id/prevMonthButton"
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        android:text="@string/prevMonth" />
					</LinearLayout>
                    <my.ekushok.grief.ChartView
                        android:id="@+id/chart_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dip" />
                </LinearLayout>
            </FrameLayout>

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true" >
            </TabWidget>
        </RelativeLayout>
    </TabHost>

</LinearLayout>